Update links from Codex.html to index.html

--- a/page2.html
+++ b/page2.html
@@ -221,7 +221,7 @@
   <div class="dropdown">
     <button class="dropbtn" onclick="toggleMenu()">Menu</button>
     <div class="dropdown-content" id="menuList">
-      <a href="Codex.html">Main</a>
+      <a href="index.html">Main</a>
       <a href="page3.html">3</a>
       <a href="page4.html">4</a>
       <a href="page5.html">5</a>
@@ -389,7 +389,7 @@
   </div>
 
   <div class="floating-buttons">
-    <a href="Codex.html"><button class="btn-fixed">Back</button></a>
+    <a href="index.html"><button class="btn-fixed">Back</button></a>
     <a href="page3.html"><button class="btn-fixed">Next</button></a>
   </div>
 
