--- a/page3.html
+++ b/page3.html
@@ -220,7 +220,7 @@
   <div class="dropdown">
     <button class="dropbtn" onclick="toggleMenu()">Menu</button>
     <div class="dropdown-content" id="menuList">
-      <a href="Codex.html">Main</a>
+      <a href="index.html">Main</a>
       <a href="page2.html">2</a>
       <a href="page4.html">4</a>
       <a href="page5.html">5</a>
