--- a/page7.html
+++ b/page7.html
@@ -52,7 +52,6 @@
     background-color: #333;
   }
 
-  /* แอนิเมชัน fade ตอนเด้งลง */
   .dropdown-content.show {
     display: block;
     animation: fadeDown 0.3s ease-out;
@@ -94,8 +93,8 @@
     box-shadow: 0 0 20px 8px rgba(107,58,187,0.35);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     color: #222;
     padding: 20px;
     overflow: hidden;
@@ -231,7 +230,7 @@
       <a href="page10.html">10</a>
     </div>
   </div>
-  <!-- ✅ แถว 1 -->
+
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
@@ -258,7 +257,6 @@
     </div>
   </div>
 
-  <!-- ✅ แถว 2 -->
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
@@ -285,7 +283,6 @@
     </div>
   </div>
 
-  <!-- ✅ แถว 3 -->
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
@@ -312,7 +309,6 @@
     </div>
   </div>
 
-  <!-- ✅ แถว 4 -->
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
@@ -338,66 +334,13 @@
       </aside>
     </div>
   </div>
-    <div class="row">
-    <div class="card">
-      <button class="toggle-btn">code</button>
-      <h3>กล่องซ้ายล่าง</h3>
-      <p>Example 4 Left</p>
-      <div class="overlay"></div>
-      <aside class="slide-panel">
-        <div class="panel-head"><strong>example-code</strong></div>
-        <button class="copy-btn" data-target="code7">Copy</button>
-        <pre><code id="code7">&lt;button&gt;Click me&lt;/button&gt;</code></pre>
-      </aside>
-    </div>
 
-    <div class="card">
-      <button class="toggle-btn">code</button>
-      <h3>กล่องขวาล่าง</h3>
-      <p>Example 4 Right</p>
-      <div class="overlay"></div>
-      <aside class="slide-panel">
-        <div class="panel-head"><strong>example-code</strong></div>
-        <button class="copy-btn" data-target="code8">Copy</button>
-        <pre><code id="code8">&lt;table&gt;&lt;tr&gt;&lt;td&gt;Data&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</code></pre>
-      </aside>
-    </div>
-  </div>
-    </div>
-    <div class="row">
-    <div class="card">
-      <button class="toggle-btn">code</button>
-      <h3>กล่องซ้ายล่าง</h3>
-      <p>Example 4 Left</p>
-      <div class="overlay"></div>
-      <aside class="slide-panel">
-        <div class="panel-head"><strong>example-code</strong></div>
-        <button class="copy-btn" data-target="code7">Copy</button>
-        <pre><code id="code7">&lt;button&gt;Click me&lt;/button&gt;</code></pre>
-      </aside>
-    </div>
-
-    <div class="card">
-      <button class="toggle-btn">code</button>
-      <h3>กล่องขวาล่าง</h3>
-      <p>Example 4 Right</p>
-      <div class="overlay"></div>
-      <aside class="slide-panel">
-        <div class="panel-head"><strong>example-code</strong></div>
-        <button class="copy-btn" data-target="code8">Copy</button>
-        <pre><code id="code8">&lt;table&gt;&lt;tr&gt;&lt;td&gt;Data&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</code></pre>
-      </aside>
-    </div>
-  </div>
-
-  <!-- 🔹 ปุ่มลอย -->
   <div class="floating-buttons">
     <a href="page6.html"><button class="btn-fixed">Back</button></a>
     <a href="page8.html"><button class="btn-fixed">Next</button></a>
   </div>
 
 <script>
-  // ✅ เปิด/ปิด slide panel
   document.querySelectorAll('.card').forEach(card => {
     const toggle = card.querySelector('.toggle-btn');
     const overlay = card.querySelector('.overlay');
@@ -415,7 +358,6 @@
     });
   });
 
-  // ✅ ปุ่ม Copy โค้ด
   document.querySelectorAll('.copy-btn').forEach(btn => {
     btn.addEventListener('click', async () => {
       const targetId = btn.getAttribute('data-target');
